# metax-mxtop

./: 1  README.md  pyproject.toml
src/mxtop/: __init__.py  cli.py  formatting.py  host.py  tui.py
src/mxtop/rendering/: __init__.py
tests/: test_cli.py  test_host.py  test_rendering.py  test_tui.py  test_version.py
